<resources>
    <string name="app_name">DanmakuBay</string>

    <string name="app_title">弹幕贝</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_auth_login">AuthLoginActivity</string>

    <string name="unauthorized">未授权</string>
    <string name="not_login">未登录</string>
    <string name="login_success">登陆成功</string>
    <string name="title_activity_launch">LaunchActivity</string>

    <string name="open_window">打开弹幕</string>
    <string name="close_window">关闭弹幕</string>
    <string name="open_find_window">打开查词工具</string>
    <string name="close_find_window">关闭查词工具</string>
    <string name="set_danmaku">弹幕设定</string>
    <string name="add_word">添加单词</string>
    <string name="word_list">单词列表</string>
    <string name="log_out">退出登录</string>

    <string name="window_opened">弹幕已打开</string>
    <string name="window_closed">弹幕已关闭</string>
    <string name="tool_opened">查词工具已打开</string>
    <string name="tool_closed">查词工具已关闭</string>
    <string name="title_activity_add_word">AddWordActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="search">搜索</string>
    <string name="title_activity_word_list">WordListActivity</string>

    <string name="add_success">添加成功</string>
    <string name="add_fail">添加失败</string>
    <string name="get_fail">获取失败</string>
    <string name="title_activity_danmaku_setting">DanmakuSettingActivity</string>

    <!-- preferences -->
    <string name="danmaku_speed">弹幕速度</string>
    <string name="display_area">显示范围</string>
    <string name="home_only">仅桌面</string>
    <string name="all_app">所有应用</string>
    <string name="show_bg">显示背景</string>
    <string name="preview">预览</string>
    <string name="text_size">字体大小</string>
    <string name="danmaku_height">弹幕高度</string>
    <string name="save">保存</string>

    <string name="fast">快</string>
    <string name="normal">中</string>
    <string name="slow">慢</string>

    <string name="delete_word">删除</string>
</resources>
